// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`driver/rides/[rideId].tsx snapshots > no requests yet — honest empty state, not a fabricated list 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <ScrollView
    contentContainerStyle={
      {
        "paddingBottom": 20,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
          },
          {
            "paddingTop": 8,
          },
        ]
      }
    >
      <TouchableOpacity
        accessibilityLabel="Retour"
        accessibilityRole="button"
        hitSlop={12}
        onPress={[Function]}
      >
        <Ionicons
          color="#14201B"
          name="chevron-back"
          size={24}
        />
      </TouchableOpacity>
      <Text
        style={
          [
            {
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 28.799999999999997,
            },
            {
              "color": "#14201B",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
              "textAlign": "center",
            },
          ]
        }
      >
        Mon trajet
      </Text>
      <View
        style={
          {
            "width": 24,
          }
        }
      />
    </View>
    <View
      style={
        {
          "marginHorizontal": 16,
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#EDEBE1",
              "borderRadius": 16,
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "height": 160,
            },
            {},
          ]
        }
      >
        <MapView
          customMapStyle={[]}
          initialRegion={
            {
              "latitude": 36.31,
              "latitudeDelta": 1.5679999999999952,
              "longitude": 10.405000000000001,
              "longitudeDelta": 0.7200000000000017,
            }
          }
          onMapReady={[Function]}
          pitchEnabled={false}
          pointerEvents="none"
          provider="default"
          rotateEnabled={false}
          scrollEnabled={false}
          style={{}}
          zoomEnabled={false}
        >
          <Marker
            anchor={
              {
                "x": 0.5,
                "y": 0.5,
              }
            }
            coordinate={
              {
                "latitude": 36.8,
                "longitude": 10.18,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 2,
                    "borderRadius": 13,
                    "borderWidth": 2.5,
                    "elevation": 3,
                    "height": 26,
                    "justifyContent": "center",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 26,
                  },
                  {
                    "backgroundColor": "#2E9E6C",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3.5,
                      "height": 7,
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                      "width": 7,
                    },
                    {
                      "backgroundColor": "#0D1512",
                    },
                  ]
                }
              />
            </View>
          </Marker>
          <Marker
            anchor={
              {
                "x": 0.5,
                "y": 0.5,
              }
            }
            coordinate={
              {
                "latitude": 35.82,
                "longitude": 10.63,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 2,
                    "borderRadius": 13,
                    "borderWidth": 2.5,
                    "elevation": 3,
                    "height": 26,
                    "justifyContent": "center",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 26,
                  },
                  {
                    "backgroundColor": "#14201B",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3.5,
                      "height": 7,
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                      "width": 7,
                    },
                    {
                      "backgroundColor": "#F7F3E8",
                    },
                  ]
                }
              />
            </View>
          </Marker>
        </MapView>
        <View
          pointerEvents="none"
          style={
            {
              "backgroundColor": "#EDEBE1",
              "opacity": 0.18,
            }
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 0,
                "height": 16,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "100%",
              },
              {},
            ]
          }
        />
        <View
          style={
            {
              "backgroundColor": "#2E3B42",
              "borderRadius": 9999,
              "left": 8,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
              "position": "absolute",
              "top": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#F3F1E9",
                "fontSize": 12,
                "fontWeight": "600",
              }
            }
          >
            Publié
          </Text>
        </View>
      </View>
      <TouchableOpacity
        accessibilityLabel="Voir l'itinéraire en plein écran"
        accessibilityRole="button"
        activeOpacity={0.85}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "bottom": 8,
              "elevation": 2,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
              "position": "absolute",
              "right": 8,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.12,
              "shadowRadius": 6,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="expand-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Voir l'itinéraire
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 1,
            "gap": 8,
            "marginHorizontal": 16,
            "marginTop": 12,
            "padding": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EDE6D4",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 28.799999999999997,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "flex": 1,
              },
            ]
          }
        >
          Tunis → Sousse
        </Text>
        <View
          accessibilityLabel="Publié"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {
                "alignSelf": "flex-start",
                "borderRadius": 9999,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#8FD9B4",
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "500",
                },
                {
                  "color": "#22794F",
                },
              ]
            }
          >
            Publié
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#5C5748"
          importantForAccessibility="no-hide-descendants"
          name="time-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          mar. 25 août · 08:30 · Arrivée ~10:30
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#5C5748"
          importantForAccessibility="no-hide-descendants"
          name="people-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          2/4 places disponibles
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#5C5748"
          importantForAccessibility="no-hide-descendants"
          name="cash-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          12.5 DT par place
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "gap": 8,
          "marginTop": 16,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5C5748",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Points de rendez-vous
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 16,
              "borderWidth": 1,
              "gap": 8,
              "padding": 12,
            },
            {
              "backgroundColor": "#EDE6D4",
              "borderColor": "#EDE6D4",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderBottomWidth": 1,
                "gap": 2,
                "marginBottom": 8,
                "paddingBottom": 8,
              },
              {
                "borderBottomColor": "#EDE6D4",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 4,
                    "borderWidth": 1.5,
                    "height": 8,
                    "width": 8,
                  },
                  {
                    "backgroundColor": "#2E9E6C",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8C8674",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Point de rendez-vous
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "marginLeft": 16,
                },
              ]
            }
          >
            Avenue Habib Bourguiba, Tunis
          </Text>
        </View>
        <View
          style={false}
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 4,
                    "borderWidth": 1.5,
                    "height": 8,
                    "width": 8,
                  },
                  {
                    "backgroundColor": "#14201B",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8C8674",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Point de dépose
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "marginLeft": 16,
                },
              ]
            }
          >
            Boulevard Hedi Chaker, Sousse
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "gap": 8,
          "marginTop": 16,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5C5748",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        À répondre (0)
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 21,
            },
            {
              "color": "#8C8674",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "paddingVertical": 8,
            },
          ]
        }
      >
        Aucune demande en attente.
      </Text>
    </View>
    <View
      style={
        {
          "height": 32,
        }
      }
    />
  </ScrollView>
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "paddingHorizontal": 16,
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#F7F3E8",
          "borderTopColor": "#EDE6D4",
          "paddingBottom": 12,
        },
      ]
    }
  >
    <Pressable
      accessibilityLabel="Annuler le trajet"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": false,
        }
      }
      disabled={false}
      onPress={[Function]}
      style={[Function]}
    >
      <Text
        style={
          [
            {
              "fontWeight": "600",
            },
            {
              "fontSize": 16,
            },
            {
              "color": "#14201B",
            },
          ]
        }
      >
        Annuler le trajet
      </Text>
    </Pressable>
  </View>
  <Modal
    animationType="slide"
    onRequestClose={[Function]}
    visible={false}
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#F7F3E8",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 16,
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "flex": 1,
              "minHeight": 200,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <MapView
          customMapStyle={[]}
          initialRegion={
            {
              "latitude": 36.31,
              "latitudeDelta": 1.5679999999999952,
              "longitude": 10.405000000000001,
              "longitudeDelta": 0.7200000000000017,
            }
          }
          onMapReady={[Function]}
          provider="google"
          style={{}}
        >
          <Marker
            anchor={
              {
                "x": 0.5,
                "y": 0.5,
              }
            }
            coordinate={
              {
                "latitude": 36.8,
                "longitude": 10.18,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 2,
                    "borderRadius": 13,
                    "borderWidth": 2.5,
                    "elevation": 3,
                    "height": 26,
                    "justifyContent": "center",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 26,
                  },
                  {
                    "backgroundColor": "#2E9E6C",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3.5,
                      "height": 7,
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                      "width": 7,
                    },
                    {
                      "backgroundColor": "#0D1512",
                    },
                  ]
                }
              />
            </View>
          </Marker>
          <Marker
            anchor={
              {
                "x": 0.5,
                "y": 0.5,
              }
            }
            coordinate={
              {
                "latitude": 35.82,
                "longitude": 10.63,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 2,
                    "borderRadius": 13,
                    "borderWidth": 2.5,
                    "elevation": 3,
                    "height": 26,
                    "justifyContent": "center",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 26,
                  },
                  {
                    "backgroundColor": "#14201B",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3.5,
                      "height": 7,
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                      "width": 7,
                    },
                    {
                      "backgroundColor": "#F7F3E8",
                    },
                  ]
                }
              />
            </View>
          </Marker>
        </MapView>
        <View
          pointerEvents="none"
          style={
            {
              "backgroundColor": "#EDEBE1",
              "opacity": 0.18,
            }
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 0,
                "height": 16,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "100%",
              },
              {},
            ]
          }
        />
      </View>
      <TouchableOpacity
        accessibilityLabel="Fermer"
        accessibilityRole="button"
        hitSlop={12}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 20,
              "elevation": 3,
              "height": 40,
              "justifyContent": "center",
              "position": "absolute",
              "right": 16,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.15,
              "shadowRadius": 6,
              "width": 40,
            },
            {
              "backgroundColor": "#FFFFFF",
              "top": 8,
            },
          ]
        }
      >
        <Ionicons
          color="#14201B"
          name="close"
          size={22}
        />
      </TouchableOpacity>
    </View>
  </Modal>
</View>
`;

exports[`driver/rides/[rideId].tsx snapshots > one pending request (inline Accepter/Refuser) and one confirmed passenger 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <ScrollView
    contentContainerStyle={
      {
        "paddingBottom": 20,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
          },
          {
            "paddingTop": 8,
          },
        ]
      }
    >
      <TouchableOpacity
        accessibilityLabel="Retour"
        accessibilityRole="button"
        hitSlop={12}
        onPress={[Function]}
      >
        <Ionicons
          color="#14201B"
          name="chevron-back"
          size={24}
        />
      </TouchableOpacity>
      <Text
        style={
          [
            {
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 28.799999999999997,
            },
            {
              "color": "#14201B",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
              "textAlign": "center",
            },
          ]
        }
      >
        Mon trajet
      </Text>
      <View
        style={
          {
            "width": 24,
          }
        }
      />
    </View>
    <View
      style={
        {
          "marginHorizontal": 16,
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#EDEBE1",
              "borderRadius": 16,
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "height": 160,
            },
            {},
          ]
        }
      >
        <MapView
          customMapStyle={[]}
          initialRegion={
            {
              "latitude": 36.31,
              "latitudeDelta": 1.5679999999999952,
              "longitude": 10.405000000000001,
              "longitudeDelta": 0.7200000000000017,
            }
          }
          onMapReady={[Function]}
          pitchEnabled={false}
          pointerEvents="none"
          provider="default"
          rotateEnabled={false}
          scrollEnabled={false}
          style={{}}
          zoomEnabled={false}
        >
          <Marker
            anchor={
              {
                "x": 0.5,
                "y": 0.5,
              }
            }
            coordinate={
              {
                "latitude": 36.8,
                "longitude": 10.18,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 2,
                    "borderRadius": 13,
                    "borderWidth": 2.5,
                    "elevation": 3,
                    "height": 26,
                    "justifyContent": "center",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 26,
                  },
                  {
                    "backgroundColor": "#2E9E6C",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3.5,
                      "height": 7,
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                      "width": 7,
                    },
                    {
                      "backgroundColor": "#0D1512",
                    },
                  ]
                }
              />
            </View>
          </Marker>
          <Marker
            anchor={
              {
                "x": 0.5,
                "y": 0.5,
              }
            }
            coordinate={
              {
                "latitude": 35.82,
                "longitude": 10.63,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 2,
                    "borderRadius": 13,
                    "borderWidth": 2.5,
                    "elevation": 3,
                    "height": 26,
                    "justifyContent": "center",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 26,
                  },
                  {
                    "backgroundColor": "#14201B",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3.5,
                      "height": 7,
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                      "width": 7,
                    },
                    {
                      "backgroundColor": "#F7F3E8",
                    },
                  ]
                }
              />
            </View>
          </Marker>
        </MapView>
        <View
          pointerEvents="none"
          style={
            {
              "backgroundColor": "#EDEBE1",
              "opacity": 0.18,
            }
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 0,
                "height": 16,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "100%",
              },
              {},
            ]
          }
        />
        <View
          style={
            {
              "backgroundColor": "#2E3B42",
              "borderRadius": 9999,
              "left": 8,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
              "position": "absolute",
              "top": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#F3F1E9",
                "fontSize": 12,
                "fontWeight": "600",
              }
            }
          >
            Publié
          </Text>
        </View>
      </View>
      <TouchableOpacity
        accessibilityLabel="Voir l'itinéraire en plein écran"
        accessibilityRole="button"
        activeOpacity={0.85}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "bottom": 8,
              "elevation": 2,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
              "position": "absolute",
              "right": 8,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.12,
              "shadowRadius": 6,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="expand-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          Voir l'itinéraire
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 1,
            "gap": 8,
            "marginHorizontal": 16,
            "marginTop": 12,
            "padding": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EDE6D4",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 28.799999999999997,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "flex": 1,
              },
            ]
          }
        >
          Tunis → Sousse
        </Text>
        <View
          accessibilityLabel="Publié"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {
                "alignSelf": "flex-start",
                "borderRadius": 9999,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#8FD9B4",
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "500",
                },
                {
                  "color": "#22794F",
                },
              ]
            }
          >
            Publié
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#5C5748"
          importantForAccessibility="no-hide-descendants"
          name="time-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          mar. 25 août · 08:30 · Arrivée ~10:30
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#5C5748"
          importantForAccessibility="no-hide-descendants"
          name="people-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          2/4 places disponibles
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#5C5748"
          importantForAccessibility="no-hide-descendants"
          name="cash-outline"
          size={20}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#5C5748",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          12.5 DT par place
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "gap": 8,
          "marginTop": 16,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5C5748",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Points de rendez-vous
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 16,
              "borderWidth": 1,
              "gap": 8,
              "padding": 12,
            },
            {
              "backgroundColor": "#EDE6D4",
              "borderColor": "#EDE6D4",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderBottomWidth": 1,
                "gap": 2,
                "marginBottom": 8,
                "paddingBottom": 8,
              },
              {
                "borderBottomColor": "#EDE6D4",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 4,
                    "borderWidth": 1.5,
                    "height": 8,
                    "width": 8,
                  },
                  {
                    "backgroundColor": "#2E9E6C",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8C8674",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Point de rendez-vous
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "marginLeft": 16,
                },
              ]
            }
          >
            Avenue Habib Bourguiba, Tunis
          </Text>
        </View>
        <View
          style={false}
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 4,
                    "borderWidth": 1.5,
                    "height": 8,
                    "width": 8,
                  },
                  {
                    "backgroundColor": "#14201B",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#8C8674",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Point de dépose
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "marginLeft": 16,
                },
              ]
            }
          >
            Boulevard Hedi Chaker, Sousse
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "gap": 8,
          "marginTop": 16,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5C5748",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        À répondre (1)
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 16,
              "borderWidth": 1,
              "gap": 8,
              "padding": 12,
            },
            {
              "backgroundColor": "#EDE6D4",
              "borderColor": "#EDE6D4",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <View
            accessibilityLabel="Photo de Dinara Kochakajeva"
            accessibilityRole="image"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontWeight": "600",
                  },
                  {
                    "color": "#14201B",
                    "fontSize": 16,
                  },
                ]
              }
            >
              DK
            </Text>
          </View>
          <View
            style={
              {
                "flex": 1,
                "gap": 1,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Dinara Kochakajeva
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#5C5748",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              1 place · Angle Rue de Kairouan
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <TouchableOpacity
            accessibilityLabel="Refuser la demande de Dinara Kochakajeva"
            accessibilityRole="button"
            activeOpacity={0.7}
            disabled={false}
            onPress={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 9999,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingVertical": 8,
                },
                {
                  "borderWidth": 1,
                },
                {
                  "borderColor": "#DDD4BC",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "500",
                    "lineHeight": 21,
                  },
                  {
                    "color": "#B5503C",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Refuser
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityLabel="Accepter la demande de Dinara Kochakajeva"
            accessibilityRole="button"
            activeOpacity={0.85}
            disabled={false}
            onPress={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 9999,
                  "flex": 1,
                  "justifyContent": "center",
                  "paddingVertical": 8,
                },
                {
                  "backgroundColor": "#2E9E6C",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "500",
                    "lineHeight": 21,
                  },
                  {
                    "color": "#0D1512",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Accepter
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "gap": 8,
          "marginTop": 16,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5C5748",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Passagers
      </Text>
      <TouchableOpacity
        accessibilityLabel="Gérer la réservation de Karim Fassi"
        accessibilityRole="button"
        activeOpacity={0.7}
        disabled={false}
        onPress={[Function]}
        style={
          [
            {
              "borderRadius": 16,
              "borderWidth": 1,
              "gap": 8,
              "padding": 12,
            },
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            },
            {
              "backgroundColor": "#EDE6D4",
              "borderColor": "#EDE6D4",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Photo de Karim Fassi"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontWeight": "600",
                },
                {
                  "color": "#14201B",
                  "fontSize": 14,
                },
              ]
            }
          >
            KF
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "gap": 1,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            Karim Fassi
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#5C5748",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            1 place
          </Text>
        </View>
        <View
          accessibilityLabel="Confirmé"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {
                "alignSelf": "flex-start",
                "borderRadius": 9999,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#8FD9B4",
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "500",
                },
                {
                  "color": "#22794F",
                },
              ]
            }
          >
            Confirmé
          </Text>
        </View>
        <Ionicons
          accessibilityElementsHidden={true}
          color="#DDD4BC"
          importantForAccessibility="no-hide-descendants"
          name="chevron-forward"
          size={16}
        />
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "height": 32,
        }
      }
    />
  </ScrollView>
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "paddingHorizontal": 16,
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#F7F3E8",
          "borderTopColor": "#EDE6D4",
          "paddingBottom": 12,
        },
      ]
    }
  >
    <Pressable
      accessibilityLabel="Annuler le trajet"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": false,
        }
      }
      disabled={false}
      onPress={[Function]}
      style={[Function]}
    >
      <Text
        style={
          [
            {
              "fontWeight": "600",
            },
            {
              "fontSize": 16,
            },
            {
              "color": "#14201B",
            },
          ]
        }
      >
        Annuler le trajet
      </Text>
    </Pressable>
  </View>
  <Modal
    animationType="slide"
    onRequestClose={[Function]}
    visible={false}
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#F7F3E8",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 16,
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "flex": 1,
              "minHeight": 200,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <MapView
          customMapStyle={[]}
          initialRegion={
            {
              "latitude": 36.31,
              "latitudeDelta": 1.5679999999999952,
              "longitude": 10.405000000000001,
              "longitudeDelta": 0.7200000000000017,
            }
          }
          onMapReady={[Function]}
          provider="google"
          style={{}}
        >
          <Marker
            anchor={
              {
                "x": 0.5,
                "y": 0.5,
              }
            }
            coordinate={
              {
                "latitude": 36.8,
                "longitude": 10.18,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 2,
                    "borderRadius": 13,
                    "borderWidth": 2.5,
                    "elevation": 3,
                    "height": 26,
                    "justifyContent": "center",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 26,
                  },
                  {
                    "backgroundColor": "#2E9E6C",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3.5,
                      "height": 7,
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                      "width": 7,
                    },
                    {
                      "backgroundColor": "#0D1512",
                    },
                  ]
                }
              />
            </View>
          </Marker>
          <Marker
            anchor={
              {
                "x": 0.5,
                "y": 0.5,
              }
            }
            coordinate={
              {
                "latitude": 35.82,
                "longitude": 10.63,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 2,
                    "borderRadius": 13,
                    "borderWidth": 2.5,
                    "elevation": 3,
                    "height": 26,
                    "justifyContent": "center",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 0.2,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 26,
                  },
                  {
                    "backgroundColor": "#14201B",
                    "borderColor": "#FFFFFF",
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 3.5,
                      "height": 7,
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                      "width": 7,
                    },
                    {
                      "backgroundColor": "#F7F3E8",
                    },
                  ]
                }
              />
            </View>
          </Marker>
        </MapView>
        <View
          pointerEvents="none"
          style={
            {
              "backgroundColor": "#EDEBE1",
              "opacity": 0.18,
            }
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 0,
                "height": 16,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "100%",
              },
              {},
            ]
          }
        />
      </View>
      <TouchableOpacity
        accessibilityLabel="Fermer"
        accessibilityRole="button"
        hitSlop={12}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 20,
              "elevation": 3,
              "height": 40,
              "justifyContent": "center",
              "position": "absolute",
              "right": 16,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.15,
              "shadowRadius": 6,
              "width": 40,
            },
            {
              "backgroundColor": "#FFFFFF",
              "top": 8,
            },
          ]
        }
      >
        <Ionicons
          color="#14201B"
          name="close"
          size={22}
        />
      </TouchableOpacity>
    </View>
  </Modal>
</View>
`;
